Prepare Rasa Chatbot for Coolify Deployment

--- a/rasa-chatbot/Dockerfile
+++ b/rasa-chatbot/Dockerfile
@@ -7,11 +7,10 @@ WORKDIR /app
 # Copy project files
 COPY . /app
 
-# (Optional) Install extra requirements for custom actions
-# RUN pip install -r actions/requirements.txt
+# Train the model during build
+RUN rasa train
 
 # Expose the port Rasa runs on
 EXPOSE 5005
 
 # Default command to run Rasa server
-CMD ["run", "--enable-api", "--cors", "*", "--debug"]
