--- a/rasa-chatbot/Dockerfile.actions
+++ b/rasa-chatbot/Dockerfile.actions
@@ -1,13 +1,15 @@
 FROM rasa/rasa-sdk:3.6.0
 
+# Set working directory
+WORKDIR /app
+
 # Copy actions file
 COPY actions /app/actions
 
 # Set environment variables
-ENV RASA_ACTION_PORT=3001
+ENV RASA_ACTION_PORT=5055
 ENV RASA_ACTION_HOST=0.0.0.0
 
 # Expose the port
-EXPOSE 3001
+EXPOSE 5055
 
-CMD ["start", "--actions", "actions", "--port", "3001", "--host", "0.0.0.0"]
