--- a/rasa-chatbot/docker-compose.coolify.yml
+++ b/rasa-chatbot/docker-compose.coolify.yml
@@ -4,7 +4,7 @@ services:
   rasa-server:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.simple
     ports:
       - "5005:5005"
     environment:
