Fix Docker User Permissions

--- a/rasa-chatbot/Dockerfile
+++ b/rasa-chatbot/Dockerfile
@@ -6,17 +6,17 @@ WORKDIR /app
 # Copy project files
 COPY . /app
 
-# Create necessary directories
+# The rasa image runs as user 1001, so we need to ensure proper ownership
+USER root
+RUN chown -R 1001:1001 /app
+USER 1001
+
+# Create necessary directories with proper permissions
 RUN mkdir -p /app/models
 
 # Set environment variables for training
 ENV PYTHONPATH=/app
 ENV RASA_HOME=/app
-
-# Install any additional dependencies if needed
-USER root
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
-USER 1001
 
 # Train the model with verbose output and error handling
 RUN rasa train --debug --verbose || (echo "Training failed, checking files..." && ls -la /app && ls -la /app/data && exit 1)
