--- a/rasa-chatbot/Dockerfile.actions
+++ b/rasa-chatbot/Dockerfile.actions
@@ -3,8 +3,11 @@ FROM rasa/rasa-sdk:3.6.0
 # Set working directory
 WORKDIR /app
 
-# Copy actions file
-COPY actions /app/actions
+# Copy actions file with proper ownership
+COPY --chown=1001:1001 actions /app/actions
+
+# Switch to the correct user
+USER 1001
 
 # Set environment variables
 ENV RASA_ACTION_PORT=5055
@@ -13,3 +16,5 @@ ENV RASA_ACTION_HOST=0.0.0.0
 # Expose the port
 EXPOSE 5055
 
+# Start the action server
+CMD ["start", "--actions", "actions", "--host", "0.0.0.0", "--port", "5055"]
